# dasp

./: .gitignore  CMakeLists.txt  README  README.md  dasp.sublime-project
CreateSuperpoints/: .cproject  .project  main.cpp
Danvil/Color/: ColorMapping.h
Danvil/Tools/: Benchmark.h
KinectSuperPoints/: .cproject  .gitignore  .project  KinectSuperPoints.pro
KinectSuperPoints/src/SuperPoints/KinectSuperPoints/: DaspTracker.cpp  DaspTracker.h  WdgtKinectSuperPoints.cpp  WdgtKinectSuperPoints.h  WdgtKinectSuperPoints.ui  WdgtSuperpixelParameters.cpp  WdgtSuperpixelParameters.h  WdgtSuperpixelParameters.ui  main.cpp
SuperPoints/: .cproject  .gitignore  .project
SuperPoints/src/SuperPoints/: BlueNoise.cpp  BlueNoise.hpp  DaspTracker.cpp  DaspTracker.h  Mipmaps.cpp  Mipmaps.hpp  Plots.cpp  Plots.hpp  PointsAndNormals.cpp  PointsAndNormals.hpp  Spectrum.cpp  SuperpixelHistogram.hpp  Superpixels.cpp  Superpixels.hpp  Tools.hpp  TreeReduction.cpp
SuperPoints/src/SuperPoints/Experimental/: NormalizedCut.hpp
asp/: CMakeLists.txt  asp.cpp  asp.hpp
asp_cmd/: CMakeLists.txt  main.cpp
boundary_to_labels/: CMakeLists.txt  boundary_to_labels.cpp
common/: CMakeLists.txt.template  Client.hpp  WdgtDaspParameters.cpp  WdgtDaspParameters.h  WdgtDaspParameters.ui  WdgtMain.cpp  WdgtMain.h  color.hpp
dasp/: CMakeLists.txt  main.cpp
dasp_cmd/: CMakeLists.txt  main.cpp
dasp_density/: CMakeLists.txt  main.cpp
dasp_eval/: CMakeLists.txt  main.cpp
dasp_gui/: CMakeLists.txt  DaspProcessing.cpp  DaspProcessing.h  DaspTracker.cpp  DaspTracker.h  GrabOptions.h  KinectGrabber.cpp  KinectGrabber.h  WdgtAbout.cpp  WdgtAbout.h  WdgtAbout.ui  WdgtBenchmark.cpp  WdgtBenchmark.h  WdgtBenchmark.ui  WdgtKinectSuperPoints.cpp  WdgtKinectSuperPoints.h  WdgtKinectSuperPoints.ui  WdgtSettings.cpp  WdgtSettings.h  WdgtSettings.ui  WdgtSuperpixelParameters.cpp  WdgtSuperpixelParameters.h  WdgtSuperpixelParameters.ui  main.cpp
dasp_mor/: CMakeLists.txt  DaspRegistration.cpp  DaspRegistration.hpp  KinectGrabberObject.hpp  ObjectModel.hpp  PointSet.hpp  dasp_mor.cpp
dasp_tracker/: CMakeLists.txt
dasp_tracker/dasp/: DaspTracker.cpp  DaspTracker.h
dasv/: CMakeLists.txt  dasv.cpp  dasv.hpp
dasv_cmd/: CMakeLists.txt  main.cpp
dasv_vis/: CMakeLists.txt  WdgtDasvVis.cpp  WdgtDasvVis.h  WdgtDasvVis.ui  main.cpp
density/: CMakeLists.txt  PointDensity.cpp  PointDensity.hpp  ScalePyramid.cpp  ScalePyramid.hpp  Visualization.cpp  Visualization.hpp
density_cmd/: CMakeLists.txt  main.cpp
graphseg/: CMakeLists.txt  Common.hpp  IO.hpp  Labeling.cpp  Labeling.hpp  Spectral.cpp  Spectral.hpp  graphseg.cpp  graphseg.hpp
graphseg/spectral/: Magma.cpp  Magma.hpp  SolveDenseTemplate.hpp  SolveLapackTemplate.hpp  SolveSparseTemplate.cpp  SolveSparseTemplate.hpp  SolveTemplate.hpp  SpectralGraphAnalysis.hpp  SpectralIetl.hpp  arpackpp.cpp  eigen.cpp  ietl.cpp  lapack.cpp  solver.hpp  spectral.hpp  spectral_impl.hpp
kinect/: CMakeLists.txt  GrabOptions.h  KinectGrabber.cpp  KinectGrabber.h
libdasp/: CMakeLists.txt
libdasp/dasp/: AutoDepth.hpp  BlueNoise.cpp  Clustering.hpp  DaspTracker.cpp  DaspTracker.h  Graph.hpp  Histogram.hpp  IO.cpp  IO.hpp  Metric.hpp  Mipmaps.cpp  Neighbourhood.cpp  Neighbourhood.hpp  Parameters.hpp  Plots.cpp  Plots.hpp  Point.hpp  Sampling.cpp  Seed.hpp  Segmentation.cpp  Segmentation.hpp  SegmentationImpl.hpp  SuperpixelGraph.cpp  Superpixels.cpp  Superpixels.hpp  Tools.hpp  TreeReduction.hpp
libdasp/dasp/eval/: Recall.cpp  Recall.hpp  ce.cpp  ev.cpp  eval.hpp  ipq.cpp  misc.cpp  use.cpp
libdasp/dasp/graveyard/: Graph.hpp  PairRange.hpp  SegmentationImplDebug.hpp
libdasp/dasp/impl/: BlueNoise.cpp  BlueNoise.hpp  Clustering.hpp  Mipmaps.cpp  Mipmaps.hpp  RepairDepth.cpp  RepairDepth.hpp  Sampling.cpp  Sampling.hpp  Spectral.cpp  Spectral.hpp  SpectralEigenSolveDense.cpp  SpectralEigenSolveSparse.cpp  as_range.hpp
libdasp/dasp/impl/Spectral/: SolveDenseTemplate.hpp  SolveSparseTemplate.cpp  SolveSparseTemplate.hpp  SolveTemplate.cpp  SolveTemplate.hpp  Types.hpp
libdasp/dasp/tools/: Evaluation.hpp  Graph.cpp  Graph.hpp  Mipmaps.cpp  Mipmaps.hpp  PairRange.hpp  ProgramOptions.hpp  Recall.cpp  Recall.hpp  RepairDepth.cpp
libdasp/src/SuperPoints/: BlueNoise.hpp  DaspTracker.cpp  Spectrum.hpp  SuperpixelGraph.hpp  SuperpixelHistogram.hpp  Superpixels.cpp  Superpixels.hpp
libdasp/src/SuperPoints/graveyard/: PointsAndNormals.cpp
normals_cmd/: CMakeLists.txt  main.cpp
pds/: BlueNoise.cpp  BlueNoise.hpp  CMakeLists.txt  DeltaDensitySampling.cpp  DeltaDensitySamplingOld.cpp  Density.cpp  Fattal.cpp  Fattal.hpp  FloydSteinberg.cpp  FloydSteinbergMultiLayer.cpp  Grid.cpp  Grid.hpp  Mipmaps.cpp  Mipmaps.hpp  MultiLayerFloydSteinberg.cpp  PDS.cpp  PDS.hpp  SPDS.cpp  SimplifiedPDS.cpp  SimplifiedPDSOld.cpp  SimplifiedPoissonDiskSampling.cpp  SimplifiedPoissonDiskSamplingOld.cpp  Tools.hpp
pds_cmd/: CMakeLists.txt  main.cpp  plot_density.gp  plot_fattal_anim.gp  plot_points.gp
rgbd/: CMakeLists.txt  GrabOptions.h  KinectGrabber.cpp  KinectGrabber.h  rgbd.cpp  rgbd.hpp
vis_graph/: CMakeLists.txt  main.cpp
